# VR180-Silver-Bullet

./: .gitignore  10BIT_PERFORMANCE_FIX.md  10BIT_PREVIEW_FIX.md  ALL_FIXES_SUMMARY.txt  BUGFIX_v1.4.3.md  BUILD.md  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  BUILD_X265_MULTIVIEW.md  BUNDLED_BUILD_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CRITICAL_FIX_v1.4.3_SUMMARY.txt  Cargo.toml  DISTRIBUTION.md  DISTRIBUTION_PACKAGE_v1.4.2.txt  DISTRIBUTION_SUMMARY.md  DLL_ERROR_FIX.txt  FFMPEG_PATH_FIX.txt  FINAL_MV-HEVC_WORKFLOW.md  FINAL_SUMMARY.md  FRAME_CACHE_OPTIMIZATION.md  GITHUB_CHECKLIST.md  GITHUB_QUICK_GUIDE.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_INSTRUCTIONS.md  GS010141_orientation_data.csv  GoPro MAX2 GP-Log to Rec.709 Technical 33.cube  HARDWARE_ACCELERATION.txt  INSTALL_VC_RUNTIME.bat  LATEST_FIXES.txt  MV-HEVC_IMPROVEMENTS.md  PACKAGING_QUICK_START.md  PLATFORM_FEATURES.md  PROGRESS_HANG_FIX.txt  QUICK_COMMANDS.txt  README.md  README_DISTRIBUTION.md  README_FIRST.txt  README_MVHEVC.md  (+54 more)
.claude/: settings.local.json
VR180_Silver_Bullet_Windows_BuildKit/: CHANGELOG.md  FILE_LIST.txt  QUICK_START.txt  README.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.2.md  RELEASE_NOTES_v1.4.3.md  UPDATE_SUMMARY.txt  VERSION_INFO.txt  WHATS_NEW_v1.4.2.txt  build_windows.bat  build_windows.ps1  check_requirements.bat  parse_gyro_raw.py  requirements.txt  vr180_gui.py  vr180_silver_bullet.spec
VR180_Silver_Bullet_Windows_BuildKit/spatialmedia/: gui.py  metadata_utils.py
VR180_Silver_Bullet_Windows_BuildKit/spatialmedia/mpeg/: container.py  mesh_projection.py  st3d.py
VR180_Silver_Bullet_Windows_BuildKit/spatialmedia/spatialmedia/mpeg/: box.py
assets/: icon.icns
crates/vr180-app/: .gitignore  Cargo.toml  README.md  tauri.conf.json
crates/vr180-app/capabilities/: default.json
crates/vr180-app/icons/: icon.icns
crates/vr180-app/src/: commands.rs  lib.rs  main.rs
crates/vr180-app/ui/: index.html  main.js  style.css
crates/vr180-braw/: Cargo.toml
crates/vr180-braw/src/: audio.rs  decoder.rs  gyro.rs  info.rs  lib.rs
crates/vr180-core/: Cargo.toml
crates/vr180-core/src/: atoms.rs  color.rs  eac.rs  geoc.rs  gyro.rs  lib.rs  project.rs  segments.rs
crates/vr180-core/src/eac/: assemble.rs  dims.rs  mod.rs
crates/vr180-core/src/gyro/: cori_iori.rs  gpmf.rs  mod.rs  raw.rs  resample.rs  rs_omega.rs  stabilize.rs  vqf.rs
crates/vr180-core/tests/fixtures/: GS010172.gpmf  README.md
crates/vr180-fisheye/: Cargo.toml
crates/vr180-fisheye/src/: calib.rs  dji_osv.rs  lib.rs  presets.rs  projection.rs
crates/vr180-gui/: Cargo.toml  build.rs
crates/vr180-gui/src/: app.rs  audio_player.rs  decoder.rs  main.rs  updater.rs
crates/vr180-pipeline/: Cargo.toml
crates/vr180-pipeline/src/: audio.rs  braw_imu.rs  decode.rs  dji_imu.rs  encode.rs  fisheye_decode.rs  fisheye_export.rs  gpu.rs  helpers.rs  imu.rs  interop_macos.rs  interop_windows.rs  lib.rs  nvenc_cuda.rs  panomap.rs  render.rs  source_kind.rs  spherical_inject.rs  vt_denoise.rs
crates/vr180-pipeline/src/shaders/: cdl.wgsl  cdl_16.wgsl  color_grade.wgsl  color_grade_16.wgsl  compose_preview.wgsl  compose_sbs_bgra.wgsl  compose_sbs_p010_uv.wgsl  compose_sbs_p010_y.wgsl  compose_sbs_p210_uv.wgsl  downsample_4x.wgsl  eac_to_equirect.wgsl  eac_to_fisheye.wgsl  fisheye_p010_to_fisheye_16.wgsl  fisheye_p010_to_fisheye_rs_16.wgsl  fisheye_p010_to_hequirect.wgsl  fisheye_p010_to_hequirect_rs.wgsl  fisheye_to_fisheye.wgsl  fisheye_to_fisheye_16.wgsl  fisheye_to_fisheye_rs.wgsl  fisheye_to_hequirect.wgsl  fisheye_to_hequirect_rs.wgsl  gaussian_blur_1d.wgsl  lut3d.wgsl  lut3d_16.wgsl  mid_detail_combine.wgsl  nv12_to_eac_cross.wgsl  p010_resolve_rgba16.wgsl  rgba_to_eac_cross.wgsl  sharpen_combine.wgsl
crates/vr180-render/: Cargo.toml
crates/vr180-render/src/: config.rs  main.rs
docs/: ARCHITECTURE.md  AUTO-UPDATE.md  BUILD.md  ROADMAP.md  WINDOWS_BUILD.md
examples/: README.md  full_vision_pro.json  minimal.json
github_release/: CHANGELOG.md  README.md  RELEASE_NOTES.md
helpers/: README.md  build_swift.sh
helpers/braw/: braw_helper.cpp  build_braw.sh
helpers/swift/: apac_encode.swift  mvhevc_encode.swift  vt_denoise.swift
installer/: windows.iss
scripts/: make-latest-json.mjs
spatialmedia/: spatial_media_metadata_injector.spec
spatialmedia/mpeg/: mpeg4_container.py  sv3d.py
spatialmedia/spatialmedia/: __main__.py
spatialmedia/spatialmedia/mpeg/: bitwiseio.py  mesh.py  sa3d.py
windows_build_pack/: BUILD.bat  LICENSE  QUICKSTART.txt  README.md  README_WINDOWS.md  START_HERE.txt  requirements.txt  vr180_gui.py  vr180_processor.spec
