[package]
name = "vr180-fisheye"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Fisheye projection math (Kannala-Brandt), camera presets, Gyroflow lens-profile JSON loader for the unified VR180 Silver Bullet pipeline."

[dependencies]
# Workspace deps
vr180-core = { workspace = true }

# Serialization (Gyroflow lens-profile JSON, .dfsb projects later)
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Numerics (KB inverse Newton-Raphson, FOV derivation)
nalgebra = { workspace = true }
